Fix logo overflow in mobile header

--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,11 @@ a:hover {
 }
 
 .header__logo img {
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  aspect-ratio: 1/1;
   object-fit: cover;
+  display: block;
 }
 
 .nav__list {
